[package]
name = "platformer"
version = "0.1.0"
authors = ["Edward Vear <edwardvear@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy="0.7"
# benimator="3.3"
benimator = { path="../edward_benimator" }
bevy_rapier2d = "0.13"
